src/test/deca/context/invalid/sansObjet/DeclarationWihtoutVariableFloat.deca
{
    float = 202.2;
}